--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -127,7 +127,7 @@ db {
     poolInitialSize = 8
     poolMaxSize = 8
     poolConnectionTimeoutMillis = 5000
-    driver = "org.postgresql.Driver"
+    driver = "io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver"
     url = ${?POSTGRES_WRITE_URL}
     user = ${?POSTGRES_USERNAME}
     password = ${?POSTGRES_PASSWORD}
@@ -141,7 +141,7 @@ db {
     poolMaxSize = 2
     poolConnectionTimeoutMillis = 5000
     # Changes to this value should be reflected in liquibase.properties
-    driver = "org.postgresql.Driver"
+    driver = "io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver"
     # Changes to this value should be reflected in liquibase.properties
     url = ${?POSTGRES_WRITE_URL}
     user = ${?POSTGRES_USERNAME}
@@ -155,7 +155,7 @@ db {
     poolInitialSize = 5
     poolMaxSize = 5
     poolConnectionTimeoutMillis = 5000
-    driver = "org.postgresql.Driver"
+    driver = "io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver"
     url = ${?POSTGRES_WRITE_URL}
     user = ${?POSTGRES_USERNAME}
     password = ${?POSTGRES_PASSWORD}
@@ -166,7 +166,7 @@ db {
     poolInitialSize = 8
     poolMaxSize = 8
     poolConnectionTimeoutMillis = 5000
-    driver = "org.postgresql.Driver"
+    driver = "io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver"
     url = ${?POSTGRES_READ_URL}
     user = ${?POSTGRES_USERNAME}
     password = ${?POSTGRES_PASSWORD}
