--- a/env/local.env
+++ b/env/local.env
@@ -26,8 +26,8 @@ export OIDC_AUTHORITY_ENDPOINT="https://terradevb2c.b2clogin.com/terradevb2c.onm
 export GOOGLE_TRACE_SAMPLING_PROBABILITY=0
 export GOOGLE_TRACE_ENABLED="false"
 export POSTGRES_PASSWORD="sam-test"
-export POSTGRES_READ_URL="jdbc:postgresql://localhost:5432/testdb"
-export POSTGRES_WRITE_URL="jdbc:postgresql://localhost:5432/testdb"
+export POSTGRES_READ_URL="jdbc:otel:postgresql://localhost:5432/testdb"
+export POSTGRES_WRITE_URL="jdbc:otel:postgresql://localhost:5432/testdb"
 export POSTGRES_USERNAME="sam-test"
 export SAM_PEM_PATH="src/main/resources/rendered/sam-account.pem"
 export SAM_SA_PATH="src/main/resources/rendered/sam-account.json"
