disable Pet Service Accounts in tests

--- a/env/local.env
+++ b/env/local.env
@@ -25,6 +25,7 @@ export LEONARDO_PET_SERVICE_ACCOUNT="leonardo-dev@broad-dsde-dev.iam.gserviceacc
 export OIDC_AUTHORITY_ENDPOINT="https://terradevb2c.b2clogin.com/terradevb2c.onmicrosoft.com/v2.0?p=b2c_1a_signup_signin_dev"
 export GOOGLE_TRACE_SAMPLING_PROBABILITY=0
 export GOOGLE_TRACE_ENABLED="false"
+export PET_SIGNING_ACCOUNTS_ENABLED="true"
 export POSTGRES_PASSWORD="sam-test"
 export POSTGRES_READ_URL="jdbc:postgresql://localhost:5432/testdb"
 export POSTGRES_WRITE_URL="jdbc:postgresql://localhost:5432/testdb"
