--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -118,6 +118,7 @@ googleServices {
     samplingProbability = ${?OPENCENSUS_SAMPLING_PROBABILITY} # for backwards compatibility
     samplingProbability = ${?GOOGLE_TRACE_SAMPLING_PROBABILITY}
   }
+  petSigningAccountsEnabled = ${?PET_SIGNING_ACCOUNTS_ENABLED}
 }
 
 db {
