sam_user_id is varchar in the db

--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -4281,7 +4281,7 @@ components:
         - updatedAt
       properties:
         id:
-          type: number
+          type: string
           description: User's Id
         googleSubjectId:
           type: string
