--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -138,6 +138,9 @@ resourceTypes = {
       }
       view_migration_status = {
         description = "allows viewing the status of a migration"
+      },
+      read_job_result = {
+        description = "allows reading the result of a job"
       }
     }
     ownerRoleName = "owner"
@@ -153,7 +156,7 @@ resourceTypes = {
         includedRoles = ["owner"]
       }
       owner = {
-        roleActions = ["delete", "read_policies", "share_policy::owner", "share_policy::application", "share_policy::writer", "share_policy::reader", "share_policy::discoverer", "own", "write", "read", "discover", "compute", "share_policy::share-reader", "share_policy::share-writer", "share_policy::can-compute", "share_policy::can-catalog", "read_auth_domain", "update_auth_domain", "create_controlled_user_shared", "create_controlled_user_private", "create_referenced_resource", "update_referenced_resource", "delete_referenced_resource", "list_children", "remove_child", "add_child", "migrate", "view_migration_status"]
+        roleActions = ["delete", "read_policies", "share_policy::owner", "share_policy::application", "share_policy::writer", "share_policy::reader", "share_policy::discoverer", "own", "write", "read", "discover", "compute", "share_policy::share-reader", "share_policy::share-writer", "share_policy::can-compute", "share_policy::can-catalog", "read_auth_domain", "update_auth_domain", "create_controlled_user_shared", "create_controlled_user_private", "create_referenced_resource", "update_referenced_resource", "delete_referenced_resource", "list_children", "remove_child", "add_child", "migrate", "view_migration_status", "read_job_result"]
         # Workspace Manager also maintains a mapping of workspace roles to controlled resource roles. If you change this mapping, check that service's mapping as well.
         descendantRoles = {
           google-project = ["owner"]
@@ -166,13 +169,13 @@ resourceTypes = {
         }
       }
       application = {
-        roleActions = ["read_policies", "write", "read", "create_controlled_user_shared", "create_controlled_user_private", "create_controlled_application_shared", "create_controlled_application_private", "create_referenced_resource", "update_referenced_resource", "delete_referenced_resource", "list_children", "add_child", "remove_child", "read_auth_domain"]
+        roleActions = ["read_policies", "write", "read", "create_controlled_user_shared", "create_controlled_user_private", "create_controlled_application_shared", "create_controlled_application_private", "create_referenced_resource", "update_referenced_resource", "delete_referenced_resource", "list_children", "add_child", "remove_child", "read_auth_domain", "read_job_result"]
         descendantRoles = {
           google-project = ["pet-creator"]
         }
       }
       writer = {
-        roleActions = ["read_policy::owner", "write", "read", "discover", "create_controlled_user_shared", "create_controlled_user_private", "create_referenced_resource", "update_referenced_resource", "delete_referenced_resource", "list_children", "add_child", "remove_child", "read_auth_domain", "view_migration_status"]
+        roleActions = ["read_policy::owner", "write", "read", "discover", "create_controlled_user_shared", "create_controlled_user_private", "create_referenced_resource", "update_referenced_resource", "delete_referenced_resource", "list_children", "add_child", "remove_child", "read_auth_domain", "view_migration_status", "read_job_result"]
         descendantRoles = {
           controlled-user-shared-workspace-resource = ["editor", "writer", "reader"]
           controlled-application-shared-workspace-resource = ["writer", "reader"]
@@ -182,7 +185,7 @@ resourceTypes = {
         }
       }
       reader = {
-        roleActions = ["read_policy::owner", "read", "discover", "read_auth_domain", "view_migration_status"]
+        roleActions = ["read_policy::owner", "read", "discover", "read_auth_domain", "view_migration_status", "read_job_result"]
         descendantRoles = {
           controlled-user-shared-workspace-resource = ["reader"]
           controlled-application-shared-workspace-resource = ["reader"]
