--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1466,6 +1466,39 @@ resourceTypes = {
     }
     reuseIds = false
   }
+  tiered-feature = {
+    actionPatterns = {
+      delete = {
+        description = "Delete this tiered feature"
+      }
+      read_policies = {
+        description = "view all policies and policy details for this tiered feature"
+      }
+      use = {
+        description = "utilize this tiered feature"
+      }
+      "share_policy::admin" = {
+        description = "change the membership of the admin policy for this tiered feature"
+      }
+      "share_policy::user" = {
+        description = "change the membership of the user policy for this tiered feature"
+      }
+      "set_access_instructions" = {
+        description = "set access instructions for this tiered feature"
+      }
+    }
+    ownerRoleName = "admin"
+    roles = {
+      admin = {
+        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user", "set_access_instructions"]
+      }
+      user = {
+        roleActions = ["use"]
+      }
+    }
+    allowLeaving = true
+    reuseIds = true
+  }
 }
 
 
