--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1466,22 +1466,22 @@ resourceTypes = {
     }
     reuseIds = false
   }
-  tiered-feature = {
+  restricted-feature = {
     actionPatterns = {
       delete = {
-        description = "Delete this tiered feature"
+        description = "Delete this restricted feature"
       }
       read_policies = {
-        description = "view all policies and policy details for this tiered feature"
+        description = "view all policies and policy details for this restricted feature"
       }
       use = {
-        description = "utilize this tiered feature"
+        description = "utilize this restricted feature"
       }
       "share_policy::admin" = {
-        description = "change the membership of the admin policy for this tiered feature"
+        description = "change the membership of the admin policy for this restricted feature"
       }
       "share_policy::user" = {
-        description = "change the membership of the user policy for this tiered feature"
+        description = "change the membership of the user policy for this restricted feature"
       }
       "set_access_instructions" = {
         description = "set access instructions for this tiered feature"
