--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1466,25 +1466,25 @@ resourceTypes = {
     }
     reuseIds = false
   }
-  restricted-feature = {
+  enterprise-feature = {
     actionPatterns = {
       delete = {
-        description = "Delete this restricted feature"
+        description = "Delete this enterprise feature"
       }
       read_policies = {
-        description = "view all policies and policy details for this restricted feature"
+        description = "view all policies and policy details for this enterprise feature"
       }
       use = {
-        description = "utilize this restricted feature"
+        description = "utilize this enterprise feature"
       }
       "share_policy::admin" = {
-        description = "change the membership of the admin policy for this restricted feature"
+        description = "change the membership of the admin policy for this enterprise feature"
       }
       "share_policy::user" = {
-        description = "change the membership of the user policy for this restricted feature"
+        description = "change the membership of the user policy for this enterprise feature"
       }
       "set_access_instructions" = {
-        description = "set access instructions for this tiered feature"
+        description = "set access instructions for this enterprise feature"
       }
     }
     ownerRoleName = "admin"
@@ -1496,7 +1496,7 @@ resourceTypes = {
         roleActions = ["use"]
       }
     }
-    allowLeaving = true
+    allowLeaving = false
     reuseIds = true
   }
 }
