remove set_access_instructions

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1483,14 +1483,11 @@ resourceTypes = {
       "share_policy::user" = {
         description = "change the membership of the user policy for this enterprise feature"
       }
-      "set_access_instructions" = {
-        description = "set access instructions for this enterprise feature"
-      }
     }
     ownerRoleName = "admin"
     roles = {
       admin = {
-        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user", "set_access_instructions"]
+        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user"]
       }
       user = {
         roleActions = ["use"]
