ID-1147 Enterprise Feature Resource Type (#1371)

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1466,6 +1466,36 @@ resourceTypes = {
     }
     reuseIds = false
   }
+  enterprise-feature = {
+    actionPatterns = {
+      delete = {
+        description = "Delete this enterprise feature"
+      }
+      read_policies = {
+        description = "view all policies and policy details for this enterprise feature"
+      }
+      use = {
+        description = "utilize this enterprise feature"
+      }
+      "share_policy::admin" = {
+        description = "change the membership of the admin policy for this enterprise feature"
+      }
+      "share_policy::user" = {
+        description = "change the membership of the user policy for this enterprise feature"
+      }
+    }
+    ownerRoleName = "admin"
+    roles = {
+      admin = {
+        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user"]
+      }
+      user = {
+        roleActions = ["use"]
+      }
+    }
+    allowLeaving = false
+    reuseIds = true
+  }
 }
 
 
