--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1290,20 +1290,45 @@ resourceTypes = {
       "unlock_resource" = {
         description = "Can unlock a resource"
       }
+      "read_aggregate_data" = {
+        description = "Can read aggregate data about a snapshot"
+      }
+      "create_snapshot_request" = {
+        description = "Can create a snapshot request for this snapshot"
+      }
+      "get_snapshot_builder_settings" = {
+        description = "Can get the snapshot builder settings for this snapshot"
+      }
+      "update_snapshot_builder_settings" = {
+        description = "Can get the snapshot builder settings for this snapshot"
+      }
     }
     ownerRoleName = "steward"
     roles = {
       steward = {
-        roleActions = ["delete", "edit_datasnapshot", "update_snapshot", "read_data",  "discover_data",  "share_policy::steward", "share_policy::custodian", "share_policy::reader",  "share_policy::discoverer", "read_policies", "set_public", "update_passport_identifier", "export_snapshot", "view_journal", "read_auth_domain", "update_auth_domain", "lock_resource", "unlock_resource"]
+        roleActions = ["share_policy::steward", "share_policy::custodian", "update_passport_identifier", "view_journal"]
+        includedRoles = ["custodian"]
       }
       custodian = {
-        roleActions = ["delete", "edit_datasnapshot", "update_snapshot", "read_data",  "discover_data",  "share_policy::reader",  "share_policy::discoverer", "read_policies", "set_public", "export_snapshot", "read_auth_domain", "update_auth_domain", "lock_resource", "unlock_resource"]
+        roleActions = ["delete", "edit_datasnapshot", "update_snapshot", "share_policy::reader",  "share_policy::discoverer", "read_policies", "set_public", "update_auth_domain", "lock_resource", "unlock_resource"]
+        includedRoles = ["reader"]
+      }
+      snapshot_builder_manager = {
+        roleActions = ["update_snapshot_builder_settings"]
+        descendantRoles = {
+          snapshot_builder_request = ["approver"]
+        }
+      }
+      aggregate_data_reader = {
+        roleActions = ["read_aggregate_data", "create_snapshot_request"]
+        includedRoles = ["discoverer"]
       }
       discoverer = {
-        roleActions = ["discover_data", "read_policy::steward", "read_policy::discoverer", "read_auth_domain"]
+        roleActions = ["discover_data", "read_policy::steward", "read_policy::discoverer", "read_auth_domain", "get_snapshot_builder_settings"]
       }
       reader = {
-        roleActions = ["read_data", "discover_data", "read_policy::steward", "read_policy::custodian", "read_policy::discoverer", "export_snapshot", "read_auth_domain"]
+        roleActions = ["read_data", "read_policy::custodian","export_snapshot"]
+        includedRoles = ["aggregate_data_reader"]
       }
       admin = {
         roleActions = ["read_policies", "share_policy::steward", "alter_policies", "read_auth_domain", "update_auth_domain", "unlock_resource"]
@@ -1311,6 +1336,31 @@ resourceTypes = {
     }
     reuseIds = false
     authDomainConstrainable = true
+  }
+  snapshot-builder-request = {
+    actionPatterns = {
+      get = {
+        description = "Get or list the snapshot builder request
+      }
+      update = {
+        description = "Get or list the snapshot builder request
+      }
+      delete = {
+        description = "Get or list the snapshot builder request
+      }
+      approve = {
+        description = "Approve or reject the snapshot builder request
+      }
+    }
+    ownerRoleName = "owner"
+    roles = {
+      owner = {
+        roleActions = ["get", "update", "delete"]
+      }
+      approver = {
+        roleActions = ["get", "approve"]
+      }
+    }
   }
   service-perimeter = {
     actionPatterns = {
