Fix close quotes and descriptions

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1340,16 +1340,16 @@ resourceTypes = {
   snapshot-builder-request = {
     actionPatterns = {
       get = {
-        description = "Get or list the snapshot builder request
+        description = "Get or list the snapshot builder request"
       }
       update = {
-        description = "Get or list the snapshot builder request
+        description = "Update the snapshot builder request"
       }
       delete = {
-        description = "Get or list the snapshot builder request
+        description = "Delete the snapshot builder request"
       }
       approve = {
-        description = "Approve or reject the snapshot builder request
+        description = "Approve or reject the snapshot builder request"
       }
     }
     ownerRoleName = "owner"
