Testing with Service Principal auth

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -186,7 +186,7 @@ admin {
 azureServices {
   azureEnabled = ${?AZURE_ENABLED}
   allowManagedIdentityUserCreation = ${?AZURE_ALLOW_MANAGED_IDENTITY_USER_CREATION}
-  controlPlaneEnabled = true
+  controlPlaneEnabled = false
   authorizedUserKey = "authorizedTerraUser";
   kindServiceCatalog = "ServiceCatalog";
   managedAppWorkloadClientId = ${?AZURE_MANAGED_APP_WORKLOAD_CLIENT_ID}
