Add missing object values

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1361,6 +1361,8 @@ resourceTypes = {
         roleActions = ["get", "approve"]
       }
     }
+    reuseIds = false
+    authDomainConstrainable = false
   }
   service-perimeter = {
     actionPatterns = {
