--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1337,7 +1337,7 @@ resourceTypes = {
     reuseIds = false
     authDomainConstrainable = true
   }
-  snapshot-builder-request = {
+  snapshotbuilderrequest = {
     actionPatterns = {
       get = {
         description = "Get or list the snapshot builder request"
