--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1327,7 +1327,7 @@ resourceTypes = {
       snapshot_builder_manager = {
         roleActions = ["update_snapshot_builder_settings"]
         descendantRoles = {
-          snapshot_builder_request = ["approver"]
+          snapshot-builder-request = ["approver"]
         }
       }
       admin = {
@@ -1337,7 +1337,7 @@ resourceTypes = {
     reuseIds = false
     authDomainConstrainable = true
   }
-  snapshotbuilderrequest = {
+  snapshot-builder-request = {
     actionPatterns = {
       get = {
         description = "Get or list the snapshot builder request"
