--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1300,7 +1300,7 @@ resourceTypes = {
         description = "Can get the snapshot builder settings for this snapshot"
       }
       "update_snapshot_builder_settings" = {
-        description = "Can get the snapshot builder settings for this snapshot"
+        description = "Can update the snapshot builder settings for this snapshot"
       }
     }
     ownerRoleName = "steward"
