Add share policy for aggregate_data_reader

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1256,6 +1256,9 @@ resourceTypes = {
       "share_policy::reader" = {
         description = "Can grant and revoke a users' read permission"
       }
+      "share_policy::aggregate_data_reader" = {
+        description = "Can grant and revoke a users' aggregate data read permission"
+      }
       "share_policy::discoverer" = {
         description = "Can grant and revoke a users' discover permission"
       }
@@ -1310,7 +1313,7 @@ resourceTypes = {
         includedRoles = ["custodian"]
       }
       custodian = {
-        roleActions = ["delete", "edit_datasnapshot", "update_snapshot", "share_policy::reader",  "share_policy::discoverer", "read_policies", "set_public", "update_auth_domain", "lock_resource", "unlock_resource"]
+        roleActions = ["delete", "edit_datasnapshot", "update_snapshot", "share_policy::reader", "share_policy::aggregate_data_reader", "share_policy::discoverer", "read_policies", "set_public", "update_auth_domain", "lock_resource", "unlock_resource"]
         includedRoles = ["reader"]
       }
       reader = {
