Fixing Azure Integration Tests

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -103,7 +103,7 @@ testStuff = {
   azure {
     tenantId = "fad90753-2022-4456-9b0a-c7e5b934e408"
     subscriptionId = "f557c728-871d-408c-a28b-eb6b2141a087"
-    managedResourceGroupName = "e2e-8n6xqg"
+    managedResourceGroupName = "e2e-n6bgy8"
   }
 }
 
