--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1552,20 +1552,22 @@ resourceTypes = {
   }
 
   resource-access-constraint = {
-    use = {
-      description = "use this RAC for a SAM resource"
-    }
-    add_lock = {
-      description = "add a lock to this RAC"
-    }
-    delete = {
-      description = "delete this RAC"
-    }
-    read_policies = {
-      description = "view all policies and policy details for this RAC"
-    }
-    "share_policy::owner" = {
-      description = "change the membership of the owner policy for this RAC"
+    actionPatterns = {
+      use = {
+        description = "use this RAC for a SAM resource"
+      }
+      add_lock = {
+        description = "add a lock to this RAC"
+      }
+      delete = {
+        description = "delete this RAC"
+      }
+      read_policies = {
+        description = "view all policies and policy details for this RAC"
+      }
+      "share_policy::owner" = {
+        description = "change the membership of the owner policy for this RAC"
+      }
     }
     ownerRoleName = "owner"
     roles = {
@@ -1578,17 +1580,19 @@ resourceTypes = {
   }
 
   lock = {
-    use = {
-      description = "use this lock for a resource access constraint"
-    }
-    delete = {
-      description = "delete this lock"
-    }
-    read_policies = {
-      description = "view all policies and policy details for this lock"
-    }
-    "share_policy::owner" = {
-      description = "change the membership of the owner policy for this lock"
+    actionPatterns = {
+      use = {
+        description = "use this lock for a resource access constraint"
+      }
+      delete = {
+        description = "delete this lock"
+      }
+      read_policies = {
+        description = "view all policies and policy details for this lock"
+      }
+      "share_policy::owner" = {
+        description = "change the membership of the owner policy for this lock"
+      }
     }
     ownerRoleName = "owner"
     roles = {
