--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1612,8 +1612,8 @@ resourceTypes = {
       read_policies = {
         description = "view all policies and policy details for this private acr"
       }
-      use = {
-        description = "utilize this private acr"
+      identify = {
+        description = "use the identity that has access to this private acr"
       }
       "share_policy::admin" = {
         description = "change the membership of the admin policy for this private acr"
@@ -1625,10 +1625,10 @@ resourceTypes = {
     ownerRoleName = "admin"
     roles = {
       admin = {
-        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user"]
+        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user", "identify"]
       }
       user = {
-        roleActions = ["use"]
+        roleActions = ["identify"]
       }
     }
     allowLeaving = false
