--- a/env/local.env
+++ b/env/local.env
@@ -39,7 +39,7 @@ export TOS_GRACE_PERIOD_ENABLED="true"
 export TOS_BASE_URL="https://raw.githubusercontent.com/broadinstitute/terra-terms-of-service/main/versions"
 export TOS_VERSION="1"
 
-export SAM_LOG_APPENDER="Console-Standard"
+#export SAM_LOG_APPENDER="Console-Standard"
 export LANDINGZONES_REUSE_IDS=false
 
 export JANITOR_ENABLED=false
