ID-1268 Private Endpoint Access Resource Type

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1665,6 +1665,37 @@ resourceTypes = {
     allowLeaving = false
     reuseIds = true
   }
+
+  azure_private_endpoint_access = {
+    actionPatterns = {
+      delete = {
+        description = "Delete this private endpoint access"
+      }
+      read_policies = {
+        description = "view all policies and policy details for this private endpoint access"
+      }
+      identify = {
+        description = "use the identity that has access to this private endpoint access"
+      }
+      "share_policy::admin" = {
+        description = "change the membership of the admin policy for this private endpoint access"
+      }
+      "share_policy::user" = {
+        description = "change the membership of the user policy for this private endpoint access"
+      }
+    }
+    ownerRoleName = "admin"
+    roles = {
+      admin = {
+        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user", "identify"]
+      }
+      user = {
+        roleActions = ["identify"]
+      }
+    }
+    allowLeaving = false
+    reuseIds = true
+  }
 }
 
 
