Add child permission to snapshots

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1308,6 +1308,9 @@ resourceTypes = {
       "get_snapshot_builder_settings" = {
         description = "Can get the snapshot builder settings for this snapshot"
       }
+      add_child = {
+        description = "add a child resource"
+      }
     }
     ownerRoleName = "steward"
     roles = {
@@ -1327,7 +1330,7 @@ resourceTypes = {
         includedRoles = ["aggregate_data_reader"]
       }
       aggregate_data_reader = {
-        roleActions = ["read_aggregate_data", "create_snapshot_request"]
+        roleActions = ["read_aggregate_data", "create_snapshot_request", "add_child"]
         includedRoles = ["discoverer"]
       }
       discoverer = {
