[ID-1266] Fix missing auth methods in Sam generated client (#1430)
* Try hasOAuthMethods=true

* I think this property works

* Back to hasOAuthMethods=true

* Try adding bearerAuth security scheme

* Revert openapi-cli version bump

* Try this

* Try adding ApiClient.mustache

* Revert "Try adding ApiClient.mustache"

This reverts commit 10667375d47a2c5f8cc5807cd5ffecb8d3a7ff69.

* Try latest openapi-generator-cli

* Reapply "Try adding ApiClient.mustache"

This reverts commit 84c756633feeda1ce355a8ea95b04d27eab6f2c6.

* Better comment

* better comment

* better comment

* Comment

* Avoid breaking change

* Arg I only updated 1 file

* Compile error

--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -13,6 +13,7 @@ servers:
 security:
   - oidc:
       - openid
+  - bearerAuth: []
 paths:
   /api/admin/v1/user/{userId}:
     get:
@@ -4718,3 +4719,6 @@ components:
       type: openIdConnect
       openIdConnectUrl: OPEN_ID_CONNECT_URL
       x-tokenName: id_token
+    bearerAuth:
+      type: http
+      scheme: bearer
