[DCJ-357] Add TDR managed offers to sam.conf
This will enable TDR to call Sam's createManagedResourceGroup endpoint when creating new billing profiles.
Right now, TDR performs its own access checks on the TDR MRG.
All of this is a prerequisite for TDR to use Sam's createActionManagedIdentity endpoint to mint new UAMIs for TDR MRGs.

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -208,6 +208,16 @@ azureServices {
         publisher = "thebroadinstituteinc1615909626976"
         authorizedUserKey = "authorizedTerraUser"
     }
+    {
+        name = "tdr-dev"
+        publisher = "thebroadinstituteinc1615909626976"
+        authorizedUserKey = "authorizedTDRUser"
+    }
+    {
+        name = "tdr-prod"
+        publisher = "thebroadinstituteinc1615909626976"
+        authorizedUserKey = "authorizedTDRUser"
+    }
   ]
 }
 
